add gen 9 mnemonics option

--- a/views/form_gen_mnemonics.erb
+++ b/views/form_gen_mnemonics.erb
@@ -5,6 +5,7 @@
         <div class="col-auto my-1">
           <select class="custom-select mr-sm-2" name="words_count">
             <option value="15" <%= "selected" if session[:words_count] == '15' %>>15</option>
+            <option value="9" <%= "selected" if session[:words_count] == '9' %>>9</option>
             <option value="12" <%= "selected" if session[:words_count] == '12' %>>12</option>
             <option value="18" <%= "selected" if session[:words_count] == '18' %>>18</option>
             <option value="21" <%= "selected" if session[:words_count] == '21' %>>21</option>
