--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -5,10 +5,10 @@
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/wallets">List</a>
       <a class="dropdown-item" href="/wallets-create">Create</a>
+      <a class="dropdown-item" href="/tx-between-wallets">Send transactions</a>  
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/wallets-create-many">Create many</a>
       <a class="dropdown-item" href="/wallets-delete-all">Delete all</a>  
-      <a class="dropdown-item" href="/tx-between-wallets">Transactions</a>  
     </div>
   </li>
   <li class="nav-item dropdown">
