--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -63,7 +63,7 @@
                data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Send Tx</a>
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
-               <a class="dropdown-item disabled" href="/tx-to-address">To address</a>
+               <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To address</a>
              </div>
            </div>
            <a class="nav-link disabled" href="/tx-fee">Estimate Tx</a>
