--- a/views/form_tx_to_address.erb
+++ b/views/form_tx_to_address.erb
@@ -4,7 +4,7 @@ wid = params[:wid] if params[:wid]
 %>
 <div class="list-group">
   <div class="list-group-item">
-    <form action="/tx-between-wallets" method="POST">
+    <form action="/tx-to-address" method="POST">
       <div class="form-group">
         <label for="wid_src">Source Wallet</label>
         <select class="form-control" name="wid_src" id="wid_src">
@@ -24,18 +24,14 @@ wid = params[:wid] if params[:wid]
       </div>
 
       <div class="form-group">
-        <label for="wid_dst">Destination Wallet</label>
-        <select class="form-control" name="wid_dst" id="wid_dst">
-          <% wallets.each do |w| %>
-          <option value="<%= w['id'] %>"> <%= "#{w['name']} [id: #{w['id']}, balance total: #{w['balance']['total']['quantity']}]" %> </option>      
-          <% end %>
-        </select> 
-        <small id="help" class="form-text text-muted">I will pick up an unused address from that wallet and send funds to it.</small>
+        <label for="address">Address</label>
+        <input type="text" class="form-control" name="address" id="address" placeholder="Address" value="">
+
       </div>
 
       
       <button type="submit" class="btn btn-success">Send Tx</button>
-      (or <a href="/tx-to-address?wid=<%= wid %>">send to address</a>)
+      (or <a href="/tx-between-wallets?wid=<%= wid %>">send between wallets</a>)
     </form>
   </div>
 </div>
