--- a/views/tx_details.erb
+++ b/views/tx_details.erb
@@ -1,4 +1,5 @@
 <%
+  url_path = request.env['PATH_INFO'].to_s
   tx = session[:tx] if session[:tx]
   wid = session[:wid] if session[:wid]
 %>
@@ -6,9 +7,9 @@
 <div class="list-group">
 
     <div class="list-group-item">
-      <small><a href="<%= "/wallets/#{wid}/txs/#{tx['id']}" %>">refresh</a></small>
-      | <small><a href="<%= "/wallets/#{wid}/forget-tx/#{tx['id']}" %>">forget</a></small>
-      | <small><a href="<%= "/wallets/#{wid}" %>">go to wallet</a></small><br/>
+      <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{wid}/txs/#{tx['id']}" %>">refresh</a></small>
+      | <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{wid}/forget-tx/#{tx['id']}" %>">forget</a></small>
+      | <small><a href="<%= (url_path.include? "byron") ? "/byron-wallets" : "/wallets" %><%= "/#{wid}" %>">go to wallet</a></small><br/>
       <div class="alert alert-<%= tx['status'] == "pending" ? "warning" : "success" %>" role="alert">
         Transaction is <%= tx['status'] %>.
       </div>
