--- a/views/stake_pools.erb
+++ b/views/stake_pools.erb
@@ -1,26 +1,42 @@
 <%
 stake_pools = session[:stake_pools]
+sort_by = params[:sort_by] if params[:sort_by]
+case sort_by
+when "blocks"
+  sp = stake_pools.sort_by {|s| -s['metrics']['produced_blocks']['quantity']}
+when "cost"
+  sp = stake_pools.sort_by {|s| -s['cost']['quantity']}
+when "margin"
+  sp = stake_pools.sort_by {|s| -s['margin']['quantity']}
+else
+  sp = stake_pools
+end
 %>
 
 <div class="list-group">
   <div class="list-group-item">
      <%= "Stake pools: #{stake_pools.size}" %> 
-     <small><a href="/stake-pools">refresh</a></small>
+     <small><a href="/stake-pools">by performance</a></small>
+     | <small><a href="/stake-pools?sort_by=blocks">by produced blocks</a></small>
+     | <small><a href="/stake-pools?sort_by=cost">by cost</a></small>
+     | <small><a href="/stake-pools?sort_by=margin">by margin</a></small>
   </div>
-  <% stake_pools.each_with_index do |s, i| %>
+  <% sp.each_with_index do |s, i| %>
       <div class="list-group-item">
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1"><%= "#{i + 1}: #{s['id']}" %></h5> 
         </div>
         <small><b>Apparent performance:</b> <%= s['apparent_performance'] %></small><br/>
-        <small><b>Controlled stake:</b> <%= s['metrics']['controlled_stake']['quantity'] if s['metrics'] %></small><br/>
+        <small><b>Controlled stake:</b> <%= s['metrics']['controlled_stake']['quantity'] if s['metrics'] %> lovelace</small><br/>
         <small><b>Produced blocks:</b> <%= s['metrics']['produced_blocks']['quantity'] if s['metrics'] %></small><br/>
+        <small><b>Margin:</b> <%= s['margin']['quantity'] %>%</small><br/>
+        <small><b>Cost:</b> <%= s['cost']['quantity'] %> lovelace</small><br/>
         
         <% if s['metadata'] %>
           <small><b>Metadata:</b></small></br>
           <small>&nbsp;&nbsp;<b>Homepage:</b> 
           <a href="<%= s['metadata']['homepage']%>" target="_blank"><%= s['metadata']['homepage']%></a>
-          </small></br>
+          </small></br> 
           <small>&nbsp;&nbsp;<b>Name:</b> 
             <%= s['metadata']['name']%>
           </small></br>
