--- a/views/form_create_many.erb
+++ b/views/form_create_many.erb
@@ -7,8 +7,22 @@
   <div class="list-group-item">
     <form action="<%= (url_path.include? "byron") ? byron_ep : shelley_ep %>" method="POST">
       <div class="form-group">
-        <label for="pass">How many?</label>
+        <label for="how_many">How many wallets?</label>
         <input type="text" class="form-control" name="how_many" id="how_many" placeholder="How many?" value="10">
+      </div>
+      <div class="form-group">
+        <label for="words_count">How many mnemonics per wallet?</label>
+        <select class="custom-select mr-sm-2" name="words_count">
+          <% if (url_path.include? "byron") %>
+            <option value="12" selected >12</option>
+            <option value="15">15</option>
+          <% else %>
+            <option value="15" selected>15</option>
+            <option value="18">18</option>
+            <option value="21">21</option>
+            <option value="24">24</option>
+          <% end %>
+        </select>
       </div>
       <div class="form-group">
         <label for="wal_name">Wallet name prefix</label>
