--- a/views/jorm_stats.erb
+++ b/views/jorm_stats.erb
@@ -21,6 +21,7 @@ jorm_settings = session[:jorm_settings]
     <small><b>lastBlockHeight: </b> <%= jorm_stats['lastBlockHeight'] %></small><br/>
     <small><b>lastBlockSum: </b> <%= jorm_stats['lastBlockSum'] %></small><br/>
     <small><b>lastBlockTime: </b> <%= jorm_stats['lastBlockTime'] %></small><br/>
+    <small><b>lastReceivedBlockTime: </b> <%= jorm_stats['lastReceivedBlockTime'] %></small><br/>
     <small><b>lastBlockTx: </b> <%= jorm_stats['lastBlockTx'] %></small><br/>
     <small><b>txRecvCnt: </b> <%= jorm_stats['txRecvCnt'] %></small><br/>
     <small><b>uptime: </b> <%= jorm_stats['uptime'] %></small><br/>
