--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -6,6 +6,7 @@
       <a class="dropdown-item" href="/wallets">List</a>
       <a class="dropdown-item" href="/wallets-create">Create</a>
       <a class="dropdown-item" href="/tx-between-wallets">Send transactions</a>  
+      <a class="dropdown-item" href="/wallets-force-resync">Force resync</a>  
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/wallets-create-many">Create many</a>
       <a class="dropdown-item" href="/wallets-delete-all">Delete all</a>  
@@ -17,6 +18,7 @@
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/byron-wallets">List</a>
       <a class="dropdown-item" href="/byron-wallets-create">Create</a>
+      <a class="dropdown-item" href="/byron-wallets-force-resync">Force resync</a>  
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="/byron-wallets-create-many">Create many</a>
       <a class="dropdown-item" href="/byron-wallets-delete-all">Delete all</a>      
