--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -60,13 +60,13 @@
            </div>
            <div>           
              <a class="nav-link dropdown-toggle" 
-               data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Send Tx</a>
+               data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tx</a>
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To address</a>
+               <a class="dropdown-item disabled" href="/tx-to-address?wid=<%= id %>">Tx Fee</a>
              </div>
            </div>
-           <a class="nav-link disabled" href="/tx-fee">Estimate Tx</a>
            <div>           
              <a class="nav-link dropdown-toggle" 
                data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Delegation</a>
@@ -79,6 +79,7 @@
            </div>
 
            <a class="nav-link" href="/wallets/<%= wal['id']%>/utxo">UTxO</a>  
+           <a class="nav-link" href="/wallets-force-resync?wid=<%= wal['id']%>">Force resync</a>  
            <!-- <a class="nav-link" href="#" onClick="showIt('utxo_show')">UTxO</a>   -->
          </nav>
     <% else %>
@@ -87,6 +88,8 @@
           <a class="nav-link" href="#" data-toggle="modal" data-target="#confirm-delete">Delete</a>
           <a class="nav-link"  href="/byron-wallets-migrate<%="?wid=#{wal['id']}"%>">Migrate</a>
           <a class="nav-link disabled"  href="/byron-wallets-fee">Migration Fee</a>
+          <a class="nav-link" href="/byron-wallets-force-resync?wid=<%= wal['id']%>">Force resync</a>  
+          
         </nav>
     <% end %>
 
