--- a/views/main_nav.erb
+++ b/views/main_nav.erb
@@ -40,6 +40,7 @@
       data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Misc</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/network-info">Network Information</a>
+      <a class="dropdown-item" href="/network-params">Network Parameters</a>
     </div>
   </li>
   <li class="nav-item dropdown">
