--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -3,8 +3,6 @@
   id = wal['id']
   name = wal['name']
   status = wal['state']['status'] if wal['state']
-  deleg_status = wal['delegation']['status'] if wal['delegation']
-  
 %>
 
 <script src="../lib.js" type="text/javascript"></script>
@@ -110,11 +108,23 @@
                        , Slot: <%= wal['tip']['slot_number'] %>)
          </small><br/>
          <%# Display this only for Shelley wallets %>
-         <% unless url_path.include? "byron" %>
-           <small><b>Delegation:</b> <%= deleg_status %><br/>
-             &nbsp;&nbsp;<%= deleg_status == "delegating" ? "Target: #{wal['delegation']['target']}" : ""%>
-           </small><br/>
-
+         <% unless url_path.include? "byron" 
+             active_delegation = wal['delegation']['active']
+             next_delegation = wal['delegation']['next']
+         %>
+             <small><b>Delegation active:</b><br/>
+               &nbsp;&nbsp;<b>Status:</b> <%= active_delegation['status']%>
+               <%= active_delegation['status'] == "delegating" ? "<br/>&nbsp;&nbsp;<b>Target:</b> #{active_delegation['target']}" : ""%>
+             </small><br/>
+             <% if next_delegation %>
+               <small><b>Delegation next:</b> <br/>
+                 &nbsp;&nbsp;<b>Status:</b> <%= next_delegation['status']%><br/>
+                 &nbsp;&nbsp;<b>Target:</b> <%= next_delegation['target']%><br/>
+                 &nbsp;&nbsp;<b>Changes at:</b><br/>
+                 &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch start time:</b> <%= next_delegation['changes_at']['epoch_start_time']%><br/>
+                 &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch number:</b> <%= next_delegation['changes_at']['epoch_number']%>
+               </small><br/>
+             <% end %>
          <% end %>
          
            <%
