Delegation next support

--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -116,15 +116,18 @@
                &nbsp;&nbsp;<b>Status:</b> <%= active_delegation['status']%>
                <%= active_delegation['status'] == "delegating" ? "<br/>&nbsp;&nbsp;<b>Target:</b> #{active_delegation['target']}" : ""%>
              </small><br/>
-             <% if next_delegation %>
+             <% if next_delegation 
+                 next_delegation.each do |n|
+             %>
                <small><b>Delegation next:</b> <br/>
-                 &nbsp;&nbsp;<b>Status:</b> <%= next_delegation['status']%><br/>
-                 &nbsp;&nbsp;<b>Target:</b> <%= next_delegation['target']%><br/>
+                 &nbsp;&nbsp;<b>Status:</b> <%= n['status']%><br/>
+                 &nbsp;&nbsp;<b>Target:</b> <%= n['target']%><br/>
                  &nbsp;&nbsp;<b>Changes at:</b><br/>
-                 &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch start time:</b> <%= next_delegation['changes_at']['epoch_start_time']%><br/>
-                 &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch number:</b> <%= next_delegation['changes_at']['epoch_number']%>
+                 &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch start time:</b> <%= n['changes_at']['epoch_start_time']%><br/>
+                 &nbsp;&nbsp;&nbsp;&nbsp;<b>Epoch number:</b> <%= n['changes_at']['epoch_number']%>
                </small><br/>
-             <% end %>
+             <%  end 
+               end %>
          <% end %>
          
            <%
